--- a/docs/404.md
+++ b/docs/404.md
@@ -3,4 +3,4 @@ title: "Page Not Found"
 search: exclude
 ---  
 
-Sorry, but the page you were trying to view does not exist. Try searching for it or looking at the URL to see if it looks correct.
+Hmmm... this is probably my fault. Sorry. Please try browsing to the page you were looking for, or shoot me an email to complain.
