Update left-hand toc
hid topics by adding nav_exclude

--- a/docs/404.md
+++ b/docs/404.md
@@ -1,6 +1,7 @@
 ---
 title: "Page Not Found"
 search: exclude
+nav_exclude: true
 ---  
 
 This is probably my fault. Sorry. Please try browsing to the page you were looking for, otherwise shoot me an email to complain.
